registration and authorization function

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 
 {% block content %}
     {{ super() }}
-    <h2>Home page</h2>
-    <img src="static/img/jake-gyllenhaal.jpg" width="250">
+        <center>
+            <h2>We recommend, You read</h2>
+            <img style="margin-top: 20px" src="static/img/books.png" width="500">
+        </center>
+
 {% endblock %}
