--- a/templates/user.html
+++ b/templates/user.html
@@ -14,7 +14,7 @@
         {% endif %}
     {% endfor %}
 
-<a href="{{url_for('home')}}"> მთავარი გვერდი </a>
+<a href="{{url_for('logout')}}"> Log out </a>
 {% endblock %}
 
 
