--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
 
 h1 {
     color: purple;
+    font-family: Arial;
 }
 
 .error {
@@ -14,4 +15,9 @@ h1 {
 .info {
     color: green;
     font-weight: bold;
+}
+
+.navbar-brand {
+    font-weight: bold;
+    font-family: "Andale Mono";
 }
