--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Menu</a>
+        <a class="navbar-brand" href="#">Bookie</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,24 +18,36 @@
             <a class="nav-link" aria-current="page" href="/">Home</a>
 
               {% if 'username' not in session %}
-                <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                <a class="nav-link" href="{{url_for('register')}}">Registration</a>
               {% endif %}
 
-            <a class="nav-link" href="{{url_for('user')}}">My pages</a>
+            <a class="nav-link" href="{{url_for('user')}}">My Profile</a>
 
-              {% if 'username' in session %}
-                <a class="nav-link" href="/logout">Logout</a>
-              {% endif %}
+
 
 
             <a class="nav-link" href="{{url_for('books')}}">Books</a>
+
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Recommendations
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Fantasy</a></li>
+                    <li><a class="dropdown-item" href="#">Crime</a></li>
+                    <li><a class="dropdown-item" href="#">Science Fiction</a></li>
+                  </ul>
+                </li>
 
           </div>
         </div>
       </div>
     </nav>
-
-    {% block content %} <h1>Welcome {{ session['username'] }} </h1> {% endblock %}
+    {% block content %}
+        <center>
+            <h1> Welcome to Bookie! </h1>
+        </center>
+    {% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
