--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,27 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%}
 
 {% block content %}
-    {{ super() }}
-    <h2>Login - ავტორიზაცია </h2>
 
-    <form method="post" style="width:50%; margin-left:20px;">
-        <input type="text" name="username" class="form-control mb-3 mt-3" placeholder="username">
-        <input type="password" name="password" class="form-control" placeholder="password">
-        <button type="submit" class="btn btn-success mt-3">ავტორიზაცია</button>
-    </form>
+    <center>
+        <h2 style="margin-top: 50px">Log in</h2>
+
+
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            {{ form.username }}
+            {{ form.password }}
+            {{ form.submit }}
+
+
+
+        </form>
+
+
+<!--        <form method="post" style="width:50%; margin-left:20px; margin-top: 20px;">-->
+<!--            <input type="text" name="username" class="form-control mb-3 mt-3" placeholder="username">-->
+<!--            <input type="password" name="password" class="form-control" placeholder="password">-->
+<!--            <button type="submit" class="btn btn-success mt-3">Log in</button>-->
+<!--        </form>-->
+    </center>
 
 {% endblock %}
