--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,6 @@
               {% endif %}
 
             <a class="nav-link" href="{{url_for('user')}}">My Profile</a>
-
-
-
-
             <a class="nav-link" href="{{url_for('books')}}">Books</a>
 
               <li class="nav-item dropdown">
@@ -33,7 +29,8 @@
                     Recommendations
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Fantasy</a></li>
+                    <li><a class="nav-link dropdown-item " href="{{url_for('static',filename='fantasy')}}">Fantasy</a>
+                    </li>
                     <li><a class="dropdown-item" href="#">Crime</a></li>
                     <li><a class="dropdown-item" href="#">Science Fiction</a></li>
                   </ul>
