--- a/templates/base.html
+++ b/templates/base.html
@@ -16,25 +16,11 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="/">Home</a>
-
-              {% if 'username' not in session %}
-                <a class="nav-link" href="{{url_for('register')}}">Registration</a>
-              {% endif %}
-
+              <a class="nav-link" href="{{url_for('register')}}">Registration</a>
             <a class="nav-link" href="{{url_for('user')}}">My Profile</a>
-            <a class="nav-link" href="{{url_for('books')}}">Books</a>
+            <a class="nav-link" href="{{url_for('books')}}">Recommendations</a>
+            <a class="nav-link" href="{{url_for('home')}}">reviews</a>
 
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Recommendations
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="nav-link dropdown-item " href="{{url_for('static',filename='fantasy')}}">Fantasy</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Crime</a></li>
-                    <li><a class="dropdown-item" href="#">Science Fiction</a></li>
-                  </ul>
-                </li>
 
           </div>
         </div>
@@ -42,7 +28,7 @@
     </nav>
     {% block content %}
         <center>
-            <h1> Welcome to Bookie! </h1>
+            <h1 style="margin-top: 3%; font-family: Chilanka"> Welcome to Bookie! </h1>
         </center>
     {% endblock %}
 
