--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
 
 {% block content %}
     {{ super() }}
-    <h2>Home page</h2>
-    <img src="static/img/jake-gyllenhaal.jpg" width="250">
+    <center>
+        <h3 style="font-family: 'Bitstream Charter'">We recommend, you read ^_^</h3><br>
+        <img src="static/img/bookie.png" width="500">
 
+    </center>
 {% endblock %} 
