--- a/templates/login.html
+++ b/templates/login.html
@@ -3,25 +3,22 @@
 {% block content %}
 
     <center>
-        <h2 style="margin-top: 50px">Log in</h2>
-
+        {{ super() }}
+        <h2 style="margin-top: 50px">Log in</h2><br>
 
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             {{ form.username }}
+            <br>
+            <br>
             {{ form.password }}
+            <br>
+            <br>
             {{ form.submit }}
 
+            <p style="margin-top: 7%"> Don't have an account?  <a href="{{url_for('register')}}"> Register </a> </p>
 
 
         </form>
-
-
-<!--        <form method="post" style="width:50%; margin-left:20px; margin-top: 20px;">-->
-<!--            <input type="text" name="username" class="form-control mb-3 mt-3" placeholder="username">-->
-<!--            <input type="password" name="password" class="form-control" placeholder="password">-->
-<!--            <button type="submit" class="btn btn-success mt-3">Log in</button>-->
-<!--        </form>-->
-    </center>
 
 {% endblock %}
