--- a/templates/user.html
+++ b/templates/user.html
@@ -1,22 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Hello {{ session['username'] }}</h2>
-
+    <a href="{{url_for('logout')}}"> Log out </a>
+    <br><br>
     {% for each in bookPhoto %}
-    <div class="card" style="width: 10%;" >
-  <img src={{bookPhoto[each]}} class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{each}}</h5>
-    <p class="card-text">{{bookAuthor[each]}}.</p>
-      <p class="card-text">{{bookRating[each]}}</p>
-  </div>
-</div>
-    {% endfor %}
-    </body>
-    </html>
+        <br>
 
-<a href="{{url_for('logout')}}"> Log out </a>
+        <div class="card mb-3" style="max-width: 33%; margin-left: 2%">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="{{bookPhoto[each]}}" class="img-fluid rounded-start" alt="..." width="400" height="200">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 style="font-family: 'Arial'" class="card-title"><b>{{each}}</b></h5><br>
+                <p style="font-family: 'Andale Mono'" class="card-text">{{bookAuthor[each]}}</p><br>
+                <p style="font-family: C059" class="card-text"><small class="text-muted">Rating {{bookRating[each]}}</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+    {% endfor %}
+
 {% endblock %}
+
 
 
