add review table and review.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
               <a class="nav-link" href="{{url_for('register')}}">Registration</a>
             <a class="nav-link" href="{{url_for('user')}}">My Profile</a>
             <a class="nav-link" href="{{url_for('books')}}">Recommendations</a>
-            <a class="nav-link" href="{{url_for('home')}}">reviews</a>
+            <a class="nav-link" href="{{url_for('review')}}">review</a>
 
 
           </div>
