--- a/templates/fantasy.html
+++ b/templates/fantasy.html
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}
-{% block content %}
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Hello World!</title>
-    </head>
-    <body>
-    <h1>Hello World!</h1>
-    {% for each in fantasy %}
-    <div class="card" style="width: 10%;" >
-  <img src={{fantasy[each]}} class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{each}}</h5>
-    <p class="card-text">{{fant[each]}}.</p>
-      <p class="card-text">{{fantas[each]}}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-    {% endfor %}
-    </body>
-    </html>
-
-{% endblock %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+  <h1>:)</h1>
+</body>
+</html>
